# CLI-TicTacToe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TicTacToeHistory.h  board.cpp  board.h  boardDebug.cpp  compile_commands.json  main.cpp  player.cpp  player.h  tictactoe.cpp  tictactoe.h
App/: CMakeLists.txt  main.cpp
Board/: CMakeLists.txt
Board/include/: board.h  board.hpp
Board/src/: board.cpp  boardDebug.cpp  boardTableLogic.cpp  boardUtil.cpp  isWinConfig.cpp
Board/src/debug/: clearWinConFig.cpp  clearWinConfig.cpp  isValidWinCase.cpp  setWinConFig.cpp  setWinConfig.cpp
Player/: CMakeLists.txt
Player/include/: player.h  player.hpp
Player/src/: player.cpp
TicTacToe/: CMakeLists.txt
TicTacToe/include/: tictactoe.h  tictactoe.hpp
TicTacToe/src/: tictactoe.cpp  tictactoeGameLogic.cpp  tictactoeMoveLogic.cpp  tictactoeUtil.cpp
include/CLI-TicTacToe/: board.hpp  boardDebug.hpp  boardTypes.hpp  player.hpp  tictactoe.hpp
src/: board.cpp  board.h  boardDebug.cpp  main.cpp  player.cpp  player.h  tictactoe.cpp  tictactoe.h
src/Board/: boardTableLogic.cpp  boardUtil.cpp  isWinConfig.cpp
src/Board/debug/: boardDebugUtil.hpp  clearWinConfig.cpp  isValidWinCase.cpp  setWinConfig.cpp
src/TicTacToe/: tictactoe.cpp  tictactoeGameLogic.cpp  tictactoeMoveLogic.cpp  tictactoeUtil.cpp
